fix button spacing

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -145,3 +145,11 @@ p {
 .vue-treeselect__placeholder {
   color: #707070;
 }
+
+.tw-flex {
+  display: flex;
+}
+
+.tw-gap-1 {
+  gap: 0.25rem;
+}
